navbar collapse and pagination fix

--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -86,10 +86,9 @@
 }
 
 .pagination{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  grid-gap:5px;
-  height:10px;
+  display: flex;
+  justify-content: center;
+  height: 40px;
   list-style-type: none;
   margin-top: 62px;
 
@@ -97,7 +96,8 @@
 
 .paginationNumbers a{
   color: black;
-  padding: 0.4em 0.65em 0.4em 0.65em;
+  margin: 8px;
+  padding: 8px;
   border-style: solid;
   border-width: 2.5px;
   border-color: #D9D9D9;
